--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
         "ext-json": "*",
         "php": "^7.1.3",
         "symfony/http-foundation": "^4.0",
-        "doctrine/dbal": "^2.8"
+        "doctrine/dbal": "^2.8",
+        "white-october/pagerfanta-bundle": "^1.2"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "*",
-        "symfony/framework-bundle": "^4.0",
-        "white-october/pagerfanta-bundle": "^1.2"
+        "symfony/framework-bundle": "^4.0"
     },
     "license": "MIT",
     "authors": [
